--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,7 @@ buildscript {
         google()
     }
     dependencies {
-        
-
+		classpath "edu.sc.seis.launch4j:launch4j:2.5.3"
     }
 }
 
@@ -27,6 +26,8 @@ allprojects {
         aiVersion = '1.8.2'
         gdxControllersVersion = '2.2.1'
     }
+    
+
 
     repositories {
         mavenLocal()
@@ -37,6 +38,8 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url "https://jitpack.io" }
     }
+    
+
 }
 
 project(":desktop") {
@@ -44,11 +47,14 @@ project(":desktop") {
 
 
     dependencies {
-        implementation project(":core")
+    	implementation project(":core")
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.kotcrab.vis:vis-ui:1.4.11"
+        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 		api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        
     }
 }
 
@@ -58,8 +64,10 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.kotcrab.vis:vis-ui:1.4.11"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
+        api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+		api files('external jars/game-library.jar')
     }
 }
